# own3dpro-obs-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: support.md
.github/workflows/: main.yml  validate.yml
cmake/: installer-license.rtf  installer.iss.in  version.hpp.in
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini
source/: json-source.cpp  json-source.hpp  obs-source-factory.hpp  plugin.cpp  plugin.hpp  source-alerts.cpp  source-alerts.hpp  source-chat.cpp  source-chat.hpp  source-labels.cpp  source-labels.hpp
source/obs/: obs-browser-panel.hpp  obs-browser.cpp  obs-browser.hpp  obs-source-factory.hpp
source/ui/: ui-browser.cpp  ui-browser.hpp  ui-dock-chat.cpp  ui-dock-chat.hpp  ui-dock-eventlist.cpp  ui-dock-eventlist.hpp  ui-download.cpp  ui-download.hpp  ui-gdpr.cpp  ui-gdpr.hpp  ui-updater.cpp  ui-updater.hpp  ui.cpp  ui.hpp
source/util/: curl.cpp  curl.hpp  systeminfo.cpp  systeminfo.hpp  util.hpp  utility.cpp  utility.hpp  zip.cpp  zip.hpp
tools/: windows-generator.bat
tools/scene-converter/: index.js  package.json  readme.txt
ui/: gdpr.ui  own3d.qrc  theme-download.ui  updater.ui
